# Stock_Selection

./: .env.example  .gitignore  DEVELOPMENT_LOG.md  GEMINI.md  LICENSE  README.md  STOCK_WORKFLOW_PLAN.md  index.html  main.py  pyproject.toml  run_weekly.sh
config/: settings.json
data/: tickers.json
data/cache/: 1101.TW.parquet  1102.TW.parquet  1103.TW.parquet  1104.TW.parquet  1108.TW.parquet  1109.TW.parquet  1110.TW.parquet  1201.TW.parquet  1203.TW.parquet  1210.TW.parquet  1213.TW.parquet  1215.TW.parquet  1216.TW.parquet  1217.TW.parquet  1218.TW.parquet  1219.TW.parquet  1220.TW.parquet  1225.TW.parquet  1227.TW.parquet  1229.TW.parquet  1231.TW.parquet  1232.TW.parquet  1233.TW.parquet  1234.TW.parquet  1235.TW.parquet  1236.TW.parquet  1240.TWO.parquet  1256.TW.parquet  1259.TWO.parquet  1264.TWO.parquet  1268.TWO.parquet  1294.TWO.parquet  1295.TWO.parquet  1301.TW.parquet  1303.TW.parquet  1304.TW.parquet  1305.TW.parquet  1307.TW.parquet  1308.TW.parquet  1309.TW.parquet  (+1913 more)
data/temp/: candidates.json  l2_candidates.json
reports/: REPORT_2026-04-19.md  WEEKLY_REPORT_2026-04-19.md  WEEKLY_REPORT_2026-04-20.md  WEEKLY_REPORT_2026-04-21.md  WEEKLY_REPORT_2026-04-22.md
src/: ai_analyzer.py  data_ingestion.py  data_premium.py  indicators.py  tickers.py
src/filters/: advanced_filter.py  price_volume.py
src/utils/: logger.py  md_to_html.py
tests/: test_phase2.py  test_phase3.py  test_roic_capture.py
